--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -1,22 +1,12 @@
-/*   xxl: 1400px   extra extra larg  */
-
-
 /* ///////////////////////// */
 /*        hidden class       */
 /* ///////////////////////// */
 
 .hidden{display: none !important;}
-/* ///////////////////////// */
-/*          post             */
-/* ///////////////////////// */
-.post{
-  overflow: hidden;
-  box-shadow: 0px 0px 20px var(--shadow);
-  border-radius: 10px !important;
-  margin-bottom: 20px;
-  max-width: 500px !important;
-  margin-top: 20px;
-}
+
+/* ################################################### */
+/* pop window where you try to delet (post or comment) */
+/* ################################################### */
 .pop_window{
     position: relative;
     margin-bottom: -10px;
@@ -64,7 +54,17 @@
     top: -10px;
 }
 
-
+/* ///////////////////////// */
+/*          post             */
+/* ///////////////////////// */
+.post{
+    overflow: hidden;
+    box-shadow: 0px 0px 20px var(--shadow);
+    border-radius: 10px !important;
+    margin-bottom: 20px;
+    max-width: 500px !important;
+    margin-top: 20px;
+  }
 
 .post .info .delet_post:hover{color: var(--Error);}
 
@@ -96,10 +96,7 @@
     color: var(--shadow2);
     margin-left: 4px;
     margin-top: -10px;
-    /* top: 0%; */
     font-size: 21px;
-    /* background-color: blue; */
-    /* width: auto; */
 }
 
 
@@ -108,20 +105,13 @@
     font-size: 20px;
     margin: 0%;
     margin-top: -15px;
-    /* right: 0%; */
-    /* float: right; */
-    /* margin-right: 0px; */
-    /* margin-left: 100%; */
-    /* background-color: darkolivegreen; */
 }
 
 .post .info .delet_post{
     cursor: pointer;
     color: var(--Colorfont);
     font-style: normal;
-    /* text-align: end; */
     margin-top: -5px;
-    /* background-color: cadetblue; */
     height: 30px;
     width: 30px;
 }
@@ -135,8 +125,6 @@
     font-size: 14px;
     text-align: end;
     margin-top: -9px;
-    /* margin-right: 4px; */
-    /* background-color: burlywood; */
 }
 
 .post .info .delet_post::after{
@@ -149,28 +137,14 @@
 .post .img_post{
     border-radius: 15px;
     box-shadow: 0px 0px 10px var(--shadow);
-    /* width: 80%; */
-    /* height: 80%; */
-    /* width: 400px;
-    height: 400px; */
-    /* height: 65%; */
     display: block;
     margin: auto;
     margin-top: auto;
-    /* width: 400px; */
-    /* min-height: 400px; */
     max-width: 500px;
     max-height: 500px;
-    /* height: 200px; */
-    /* height: 70%; */
-    /* margin-bottom: auto; */
-    /* padding: ; */
 }
 
 .comment_like{
-    /* background-color: darkgrey; */
-    /* margin-left: auto;
-    margin-right: auto; */
     top: 5px;
 }
 
@@ -193,7 +167,6 @@
 .dislike, .like{
     font-size: 15px;
     color: var(--ColorSCfont);
-    /* padding-left: 5px; */
 }
 
 .comment_like .contener_like {
@@ -204,39 +177,20 @@
 
 .comment_like .contener_like .like,
 .comment_like .contener_like .dislike{
-    /* background-color: darkgreen; */
     height: 40px;
     font-size: 18px;
     margin-left: 5px;
-    /* justify-self: center; */
 }
-
-/* .comment_like .contener_like span:first-of-type{
-    justify-self: start;
-    margin-top: 50%;
-} */
 
 .comment_like .contener_like .feedback{
     font-size: 21px;
-    /* margin-right: 10px; */
-    /* background-color: darkcyan; */
-    /* margin: 0px; */
-    /* padding: 0%; */
     height: 30px;
-    /* justify-self: center;
-    margin: auto; */
 }
 
 .comment_like .contener_like .commentNbr {
     cursor: pointer;
     color: var(--ColorSCfont);
     margin-right:5px;
-    /* background-color: darkmagenta; */
-    /* width: 35px; */
-    /* padding-right: 5px;
-    font-weight: bold;
-    justify-self: center;
-    margin: auto; */
 }
 
 .comment_like .contener_like .commentNbr::after{
@@ -245,28 +199,9 @@
     font-size: 20px;
 }
 
-
-.contener_comment{
-    /* background-color: lightcoral; */
-    /* display: block; */
-   
-    /* position: relative;
-    float: right;
-    display: block;
-    padding: 0%;
-    margin: 0%;
-    margin-bottom: 20px;
-    width: 100%; */
-}
-
 .contener_comment .comment{
     max-height: 200px;
     overflow-y: auto;
-    /* max-height: 200px;
-    overflow-y: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto; */
 }
 
 
@@ -274,23 +209,13 @@
 /* old comments */
 /* ############ */
 .contener_comment .comment .old_comment{
-   /* width: 96%;
-   margin-top: 20px; */
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    box-shadow: 0px 2px 2px var(--shadow2);
-   /* background-color: darkolivegreen; */
    margin-bottom: 5px;
-   /* margin-left: auto;
-   margin-right: auto;
-   height: auto;
-   margin-bottom: 20px; */
-   /* display: grid;
-   overflow-x: hidden;
-   grid-template-columns: 40px 50% auto 10% 30px;
-   grid-template-rows: 30px auto auto; */
 }
+
 /* ///////////////////////// */
 /* commment like and dislike */
 /* ///////////////////////// */
@@ -298,21 +223,12 @@
 .contener_comment .comment .old_comment .dislike::after,
 .contener_comment .comment .old_comment .like::after{
     font-size: 20px;
-    /* background-color: chartreuse; */
-    /* left: 20px; */
 }
 
 .contener_comment .comment .old_comment .dislike,
 .contener_comment .comment .old_comment .like{
-    /* background-color: chartreuse; */
     text-align: center;
     padding: 0%;
-    /* grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    justify-self: center;
-    margin: auto; */
 }
 
 
@@ -325,7 +241,6 @@
     font-size: 17px;
     text-align: start;
     color: var(--ColorSCfont);
-    /* background-color: chocolate; */
     margin-top: 0%;
 }
 
@@ -345,7 +260,6 @@
     cursor: pointer;
     width: 30px;
     height: 30px;
-    /* background-color: cornflowerblue; */
 }
 
 .contener_comment .comment .old_comment .delet_comment:hover{color: var(--Error);}
@@ -354,21 +268,9 @@
 /* date creation comment */
 /* ##################### */
 .contener_comment .comment .old_comment p:first-of-type{
-    /* background-color: cyan; */
-    /* grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    justify-self: end; */
     color: var(--ColorSCfont);
     text-align: end;
     font-size: 14px;
-    /* padding: 0%; */
-    /* margin: 0%; */
-    /* margin-right: 0%; */
-    /* margin-bottom: auto;
-    margin-top: auto; */
-    /* margin: auto; */
 }
 
 /* ################ */
@@ -376,30 +278,9 @@
 /* ################ */
 
 .contener_comment .comment .old_comment p:last-of-type{
-    /* background-color: darkblue; */
     margin: 5px 0px;
     margin-top: -2px;
-    /* margin: 0%; */
-    /* grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: auto;
-    grid-row-end: auto;
-    justify-self: center; */
-    /* margin: 10px 0;
-    padding: 5px;
-    width: 96%;
-    height: auto; */
 }
-
-.contener_comment .comment .old_comment .pop_window{
-    /* grid-column-start: 1;
-    grid-column-end: 6; */
-}
-
-/* .contener_comment .comment .old_comment .pop_window .Btn {
-    
-} */
-
 
 
 .comment_like .new_comment input[type='submit']{display: none;}
@@ -410,7 +291,6 @@
 
 .comment_like .new_comment label{
     cursor: pointer;
-    /* margin: auto !important; */
     font-size: 25px;
 }
 
@@ -425,7 +305,6 @@
     margin-top: 10px;
 }
 form{
-    /* background-color: lawngreen; */
     width: 100%;
 }
 
@@ -440,32 +319,27 @@ form{
     outline-style: none;
     margin: 0%;
     padding-left: 10px;
-    /* margin-top: 5px; */
 }
 
-.comment_like .new_comment input[name='comment']::placeholder{
-    /* padding-left: 10px; */
-}
-
+/* ########################## */
+/* style scrollbar in comment */
+/* ########################## */
 .comment::-webkit-scrollbar {
   width: 5px;
-  /* cursor: pointer; */
 }
-  
-  /* Track */
+
 .comment::-webkit-scrollbar-track {
   background: #f1f1f1; 
 }
-   
-  /* Handle */
+
+
 .comment::-webkit-scrollbar-thumb {
   background: #888; 
 }
   
-  /* Handle on hover */
+
 .comment::-webkit-scrollbar-thumb:hover {
     background: #555;
-    cursor: pointer;
 }
 
 
@@ -477,7 +351,6 @@ form{
         font-size: 20px;
     }
     .post .info p{
-        /* margin-right: 10px; */
         font-size: 12px;
     }
     .comment_like .contener_like .feedback{
@@ -495,30 +368,4 @@ form{
         height: 30px !important;
     }
 }
-/* @media only screen and (min-width: 600px) and (max-width: 768px) */
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen  and (max-width: 768px) {
 
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  body{
-      /* background-color: gold; */
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-  body{
-      /* background-color: coral; */
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  body{
-      /* background-color: cornflowerblue; */
-  }
-
-}
