--- a/app/view/css/btns.css
+++ b/app/view/css/btns.css
@@ -1,9 +1,9 @@
 
 
-
-
+/* ##################################################### */
+/* where chose BtnAnim will hedding bnt and active label */
+/* ##################################################### */
 .BtnAnim{
-  /* overflow: hidden; */
   display: none !important;
 }
 .Btn{
@@ -57,27 +57,21 @@
 
 .Btn:focus{
   background-color: var(--ButtonActive);
-  /* background: var(--Button); */
   outline-style: none !important;
 }
 
 .leftBtn {
   margin-left: 10px;
 
-  }
-
-.centerBtn {
-  /* position: relative; */
-  
 }
 
 .rightBtn {
   margin-right: 10px;
-  /* position: relative !important;
-  justify-content: right; */
 }
 
-
+/* ############## */
+/* style checkbox */
+/* ############## */
 .toggle-control {
   display: block;
   position: relative;
@@ -99,7 +93,6 @@
 .toggle-control .control {
   position: absolute;
   height: 40px;
-  /* top: 0%; */
   width: 90px;
   border-radius: 25px;
   background-color: darkgray;
@@ -127,8 +120,6 @@
     height: 40px;
     font-size: 10px;
   }
-  /* .buttomBtn{width: 94%; margin-left: 3%;}
-  .buttomBtn{height: 70px; margin-top: 40px;} */
 }
 
 
@@ -142,8 +133,6 @@
 
   .Btn{
     padding: 15px 0px;
-    /* height: 35px; */
-    /* width: 200px !important; */
     font-size: 10px;
   }
 }
@@ -153,19 +142,4 @@
   .Btn{
     padding: 10px 0px;
   }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-  body{
-      /* background-color: coral; */
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  body{
-      /* background-color: cornflowerblue; */
-  }
-
 }
