--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -1,5 +1,6 @@
-
-
+/* ################## */
+/* container stickers */
+/* ################## */
 .stickers{
     height: 55px;
     box-shadow: 0px 0px 10px var(--shadow);
@@ -17,8 +18,9 @@
     cursor: pointer;
 }
 
-
-
+/* ##################################### */
+/* style stickers inside canava or video */
+/* ##################################### */
 .filter{
     width: 40px;
     height: 40px;
@@ -36,8 +38,6 @@
     padding: 0%;
     margin: 0%;
 }
-
-
 
 .filter .resize{
     width: 5px;
@@ -64,7 +64,9 @@
     content: "\f057";
     font-size: 12px;
 }
-
+/* ################################### */
+/* checkbox active camera and stickers */
+/* ################################### */
 .container-controls{
     margin-top: 20px;
     height: 50px;
@@ -72,21 +74,26 @@
 }
 
 .control-camera , .control-stickers{
-    height: 100%;
+    /* height: 100%; */
+    /* width: 40px; */
+    background-color: greenyellow;
 }
 
 
 .control-camera .control::after{content: "\f030";}
 .control-stickers .control::after{content: '\f2ab'}
 
-
-.contener_camera{
-
-}
-
+/* ############ */
+/* form (title) */
+/* ############ */
 .form{
     margin-top: 40px;
 }
+
+
+/* ############################### */
+/* container => (canvas and video) */
+/* ############################### */
 
 .contener_video{
     width: 100%;
@@ -103,8 +110,6 @@
     height: auto;
     margin: auto;
     margin-top: 20px;
-    /* max-width: 500px; */
-    /* max-height: 500px; */
     padding: 0%;
     overflow: hidden;
     border-radius: 6px;
