--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -1,7 +1,6 @@
-
-.form{
-}
-
+/* ########### */
+/* style forms */
+/* ########### */
 .form form{
     width: 100%;
 }
@@ -25,9 +24,6 @@
     text-align: center;
 }
 
-
-
-
 .form input{
     box-shadow: none;
 }
@@ -40,7 +36,6 @@
     width: calc(100% - 30px);
     float: right;
     padding-right: 25px;
-    /* margin-right: 0%; */
     margin-top: -3px;
 }
 
@@ -79,9 +74,6 @@
     margin-bottom: 5px;
     border-radius: 40px;
     border-style: solid;
-    /* grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: auto; */
     width: 100%;
 }
   
@@ -114,20 +106,6 @@
     margin-top: 5px;
 }
 
-.icon_left{
-    /* grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: auto; */
-}
-
-.icon_right{
-    /* grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: auto; */
-}
-
-
-
 
 .success{color: var(--Success);}
 
@@ -140,7 +118,9 @@
     height: 52px;
     margin-top: 20px;
     margin-bottom: 90px;
-    /* background-color: lightblue; */
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 
@@ -161,38 +141,4 @@
         border-width: 2px !important;
         margin-top: -2px !important;
     }
-}
-/* @media only screen and (min-width: 600px) and (max-width: 768px) */
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen  and (max-width: 768px) {
-    .form , .buttomBtn{
-        /* background-color: khaki; */
-        /* grid-column-start: 1;
-        grid-column-end: -1; */
-    }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .form{
-      /* background-color: gold; */
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-  .form{
-      /* background-color: coral; */
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .form, .buttomBtn{
-      /* background-color: cornflowerblue; */
-      /* grid-column-start: 3;
-      grid-column-end: 9; */
-  }
-
-
 }
