--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -1,4 +1,6 @@
-
+/* ################## */
+/* style of slid menu */
+/* ################## */
 .list {
     list-style: none;
     width: 50%;
@@ -28,8 +30,6 @@
   cursor: pointer;
   padding: auto;
   margin: auto;
-  /* margin-top: 5px;
-  margin-bottom: 5px; */
   width: 90%;
   border: none;
 }
@@ -42,7 +42,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  /* z-index: 1; */
   opacity: 0;
   margin: auto;
   transition: all 0.3s;
@@ -54,13 +53,6 @@
   border-bottom-color: var(--brdColor);
   transform: scale(0.1, 1);
 }
-/* .list li{
-  margin-top: auto;
-  margin-bottom: auto;
-  display: block;
-  border: none;
-} */
-
   
 
 .list li:hover {
@@ -71,18 +63,10 @@
   transform: scale(1.2, 1); 
 }
 .list li::after{
-  /* content: 'kdjj'; */
-  /* width: 100%; */
-  /* position: absolute; */
-  /* left: 10%; */
-  /* justify-self: end; */
-  /* justify-content: end; */
   opacity: 0.5;
   transition: all 0.3s;
   position: relative;
-  /* display: inline; */
   float: right;
-  /* padding-right: 50px; */
 }
 
 
@@ -91,32 +75,6 @@
 .list .li_home::after{font-family: "Font Awesome 5 Free"; content: '\f015';}
 .list .li_settings::after{font-family: "FontAwesome"; content: '\f085';}
 .list .li_logout::after{font-family: "Font Awesome 5 Free"; content: '\f2f5';}
-
-.list .li_camera{
-  /* background-color: aqua; */
-  /* grid-row-start: 1;
-  grid-row-end: 2; */
-}
-
-.list #li_profile{
-  /* grid-row-start: 2;
-  grid-row-end: 3; */
-}
-
-.list #li_home{
-  /* grid-row-start: 3;
-  grid-row-end: 4; */
-}
-
-.list #li_settings{
-  /* grid-row-start: 4;
-  grid-row-end: 5; */
-}
-
-.list #li_logout{
-  /* grid-row-start: 5;
-  grid-row-end: 6; */
-}
   
 
 .img {
@@ -127,7 +85,6 @@
     border-radius: 50%;
     margin-top: 2.5px;
     box-shadow: 0px 0px 20px var(--shadow);
-    /* top: 2.5px; */
 }
 
 .show , .show li{
@@ -135,26 +92,6 @@
 
 }
 
-/* @media (pointer:none), (pointer:coarse) {
-  .img {
-    height: 85px;
-    width: 85px;
-  }
-  .list{
-    top:110px;
-  }
-} */
-
-
-
-
-
-
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-
-}
 /* @media only screen and (min-width: 600px) and (max-width: 768px) */
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen  and (max-width: 768px) {
@@ -173,20 +110,5 @@
     max-width: 50%;
     height: 50%;
   }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-  body{
-      /* background-color: coral; */
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  body{
-      /* background-color: cornflowerblue; */
-  }
-
 }
   
