--- a/app/view/css/Colors.css
+++ b/app/view/css/Colors.css
@@ -1,19 +1,10 @@
 :root{
-
-    --Color0:           #5C848C;
-    --Color1:           #384549;
-    --Color3:           #CFCECD;
-    --Color4:           #767B7B;
-    --headerColor:      #f8f9fa;
-    /* --brdColor:         #505050; */
+    --footerColor:      #f8f9fa;
     --brdColor:         #F08080;
-    /* --brdColor:            #f24c05; */
     --menuColor:        #ffffff;
     --shadow:           #000000;
     --shadow2:          rgba(0, 0, 0, 0.4);
     --headPost:         #F08080;
-    /* --headPost:              #F24C05; */
-
     --Colorfont:        #ffffff;
     --ColorMainFont:    #000000;
     --ColorSCfont:      #707070;
@@ -21,10 +12,7 @@
     --ButtonActive:     #13ce66;
     --Success:          #33FF3C;
     --Error:            #FF0000;
-    --font1:              ;
-    --font2:              ;
-    --font3:            #D5DBDB;
+    --SCbgColor:        #D5DBDB;
     --bgColor:          #ffffff;
-    /* --bgColor:          #505050; */
 }
 
