--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -7,13 +7,16 @@
     border-radius: 5px;
     margin: auto;
     margin-top: 20px;
-    overflow-x: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0%;
 }
 
 .stickers img {
     height: 40px;
     width: 40px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -73,12 +76,6 @@
     padding: 0%;
 }
 
-.control-camera , .control-stickers{
-    /* height: 100%; */
-    /* width: 40px; */
-    background-color: greenyellow;
-}
-
 
 .control-camera .control::after{content: "\f030";}
 .control-stickers .control::after{content: '\f2ab'}
@@ -105,7 +102,6 @@
 
 #video_id, #canva_id{
     position: relative;
-
     width: auto;
     height: auto;
     margin: auto;
@@ -119,8 +115,8 @@
 #video, #canva{
     width: 100%;
     height: 100%;
-    margin: 0%;
-    padding: 0%;
+    margin: 0% !important;
+    padding: 0% !important;
 }
 
 
